loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:3: error: 'while' expected but 'else' found.
  else avance()
  ^LoopWhile:4: error: '(' expected but '}' found.
}
^